--- a/src/components/molecules/card/card.css
+++ b/src/components/molecules/card/card.css
@@ -18,10 +18,9 @@
 	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 .card-subtitle {
-	font-family: 'Poppins';
 	font-style: normal;
-	font-weight: 300;
-	font-size: 1.2rem;
+	font-weight: 600;
+	font-size: 16px;
 	line-height: 2.4rem;
 	letter-spacing: -0.05rem;
 	color: var(--normal-letter);
@@ -36,7 +35,7 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
-	gap: 1.5rem;
+	gap: 5px;
 	border-radius: 19px;
 }
 .linear-gradient {
@@ -55,7 +54,7 @@
 
 @media screen and (max-width: 1200px){
 	.card-subtitle{
-		font-size: 0.9rem;
+		font-size: 14px;
 	}
 	.custom-card{
 		padding: 1rem;
@@ -63,6 +62,6 @@
 }
 @media screen and (max-width: 1080px){
 	.card-subtitle{
-		font-size: 0.8rem;
+		font-size: 12px;
 	}	
 }
