--- a/src/components/organism/dashBoard/dashBoard.css
+++ b/src/components/organism/dashBoard/dashBoard.css
@@ -1,52 +1,94 @@
 .dashboard-section {
-    padding: 20px;
-    width: 100%;
-    height: auto;
-    display: flex;
-    background-image: url('../../../assets/images/9957919.jpg'); /* Ajusta la ruta a tu imagen */
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-  }
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  z-index: 2;
+  overflow: hidden;
+}
 
-  .dashboard-title {
-    display: flex;
-    align-items: center; /* Centra verticalmente */
-    justify-content: center; /* Centra horizontalmente */
-    width: 95%;
-    height: 80px;
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center;
-    color: #ededed;
-    margin: 40px auto 60px auto; /* Centra horizontalmente y ajusta los márgenes superior e inferior */
-    background: linear-gradient(
-      124.79deg,
+.dashboard-background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.dashboard-menu{
+padding: 30px;
+}
+
+.dashboard-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 95%;
+  height: 80px;
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+  color: #fff;
+  margin: 40px auto 60px auto;
+  background: linear-gradient(124.79deg,
       #b1cdee 5.82%,
       #bbd5ee 23.76%,
       #c4e3ee 34.43%,
       #aae4ee 59.12%,
       #a0d1e9 65.79%,
-      #abcdee 77.92%
-    ); 
-    border-radius: 29px; 
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      #abcdee 77.92%);
+  border-radius: 29px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+.dashboard-items {
+  margin: 20px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, auto);
+  gap: 15px;
+}
+
+.cards-container {
+  width: 100%;
+  max-width: 95%;
+  margin: 15px 30px 30px 30px;
+  display: flex;
+  justify-content: space-between;
+  gap: 40px;
+}
+
+
+/* ---- responsive ---- */
+
+@media screen and (max-width: 990px) {
+  .dashboard-section {
+    flex-direction: column;
+    align-items: center;
   }
 
+  .dashboard-menu {
+    padding: 20px;
+  }
+
+  .dashboard-title {
+    width: 100%;
+    height: auto;
+    font-size: 24px;
+    margin: 20px auto;
+  }
 
   .dashboard-items {
-    margin: 20px;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr); 
-    grid-template-rows: repeat(2, auto); 
-    gap: 15px; 
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 10px;
   }
+
+  .cards-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+
   
-  .cards-container{
-    width: 100%;
-    max-width: 95%;
-    margin: 15px 30px 30px 30px; 
-    display: flex;
-    justify-content:space-between;
-    gap: 40px;
-  }
+}
